@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tk installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.83.2.35 2006/10/23 17:58:28 dgp Exp $
+# RCS: @(#) $Id: configure.in,v 1.83.2.36 2007/01/25 02:07:35 das Exp $
 
 AC_INIT(../generic/tk.h)
 AC_PREREQ(2.13)
@@ -588,6 +588,8 @@ AC_SUBST(LIB_RSRC_FILE)
 AC_SUBST(APP_RSRC_FILE)
 AC_SUBST(REZ)
 AC_SUBST(REZ_FLAGS)
+
+SC_OUTPUT_COMMANDS_PRE
 
 tk_config_files="${tk_config_files} [Makefile tkConfig.sh]"
 AC_OUTPUT([${tk_config_files}])
